# apps/finance/internal/model/account_model.go
@@ -2,6 +2,7 @@ package model
 
 import (
 	"context"
+	"time"
 
 	"github.com/google/uuid"
 )
@@ -22,6 +23,10 @@ type Account struct {
 	Code     string      `json:"code"`
 	Name     string      `json:"name"`
 	Type     AccountType `json:"type"`
+	CreatedBy uuid.UUID `json:"createdBy,omitzero"`
+	CreatedAt time.Time `json:"createdAt,omitzero"`
+	UpdatedBy uuid.UUID `json:"updatedBy,omitzero"`
+	UpdatedAt time.Time `json:"updatedAt,omitzero"`
 }
 
 type AccountFilter struct {
