# apps/finance/internal/model/auth_model.go
@@ -6,5 +6,6 @@ type AuthenticatedUser struct {
 	ID          uuid.UUID `json:"id"`
 	Name        string    `json:"name"`
 	WorkspaceID uuid.UUID `json:"activeTeamId"`
+	WorkspaceRoles []string `json:"activeOrganizationRole"`
 	Roles       []string  `json:"role"`
 }
